--- a/aula04/ex003.html
+++ b/aula04/ex003.html
@@ -21,9 +21,10 @@
     <h1>Ola,  mundo!</h1>
     <p>Já me livre da maldição!</p>
     <script>
-       
-       var nome=window.prompt('Qual é o seu nome') // irá peguntar o nome..
-        window.alert('é um grande prazer em te conhecer, '+ nome)// sempre coloque a concatenação + para juntar a variavel mais
+        var n1 = Number(window.prompt('digite um numero: '))
+        var n2 = Number(window.prompt('digite outro valor: '))
+        var s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é ${s}`)
     </script>
 </body>
 
